--- a/RPGClash.Application/RPGClash.Application.csproj
+++ b/RPGClash.Application/RPGClash.Application.csproj
@@ -10,4 +10,13 @@
     <ProjectReference Include="..\RPGClash.Domain\RPGClash.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Behaviours\" />
+    <Folder Include="Commands\" />
+    <Folder Include="Dtos\" />
+    <Folder Include="Handlers\" />
+    <Folder Include="Exceptions\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
 </Project>
