--- a/RPGClash.Infrastucture/RPGClash.Infrastucture.csproj
+++ b/RPGClash.Infrastucture/RPGClash.Infrastucture.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\RPGClash.Application\RPGClash.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.7.4" />
+  </ItemGroup>
+
 </Project>
