Add initial migration.

--- a/RPGClash/appsettings.json
+++ b/RPGClash/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "NpgSql": "Server=Database"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
