--- a/RPGClash.Domain/RPGClash.Domain.csproj
+++ b/RPGClash.Domain/RPGClash.Domain.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Features\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.11.0" />
+  </ItemGroup>
+
 </Project>
