--- a/RPGClash/RPGClash.API.csproj
+++ b/RPGClash/RPGClash.API.csproj
@@ -10,9 +10,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
+    <PackageReference Include="Serilog.Enrichers.Environment" Version="2.3.0" />
+    <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="9.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GameEngine\RPGClash.GameEngine.csproj" />
     <ProjectReference Include="..\RPGClash.Infrastucture\RPGClash.Infrastucture.csproj" />
   </ItemGroup>
 
